--- a/server/package.json
+++ b/server/package.json
@@ -4,16 +4,36 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+      "start": "nodemon --exec ts-node src/index.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.20.1",
-    "cookie-parser": "^1.4.6",
-    "cors": "^2.8.5",
-    "express": "^4.18.2",
-    "nodemon": "^2.0.20"
+      "bcrypt": "^5.1.0",
+      "body-parser": "^1.20.1",
+      "class-validator": "^0.13.2",
+      "config": "^3.3.8",
+      "cookie-parser": "^1.4.6",
+      "cors": "^2.8.5",
+      "dotenv": "^16.0.3",
+      "express": "^4.18.2",
+      "jsonwebtoken": "^8.5.1",
+      "mysql": "^2.18.1",
+      "nodemon": "^2.0.20",
+      "reflect-metadata": "^0.1.13",
+      "ts-node": "^10.9.1",
+      "typeorm": "^0.3.10",
+      "typescript": "^4.8.4"
+  },
+  "devDependencies": {
+      "@types/bcrypt": "^5.0.0",
+      "@types/body-parser": "^1.19.2",
+      "@types/config": "^3.3.0",
+      "@types/cookie-parser": "^1.4.3",
+      "@types/cors": "^2.8.12",
+      "@types/express": "^4.17.14",
+      "@types/jsonwebtoken": "^8.5.9",
+      "@types/node": "^18.11.9"
   }
 }
